force-app/main/default/objects/Exam_Slot__c/Exam_Slot__c.object-meta.xml
<CustomObject>
    <label>Exam Slot</label>
    <nameField>
        <displayFormat>EXSLOT{000000}</displayFormat>
        <label>Exam Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>