force-app/main/default/objects/Exam_Slot__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Field to capture time of the scheduled exam</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>