force-app/main/default/objects/Exam_Slot__c/fields/Registered_Slots__c.field-meta.xml
<CustomField>
    <fullName>Registered_Slots__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field where registered slots are taken into count</description>
    <label>Registered Slots</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>