force-app/main/default/objects/Exam_Slot__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 AM - 12 PM</fullName>
            </value>
            <value>
                <fullName>1 PM - 4 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>