force-app/main/default/objects/Exam_Slot__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>This field is used to indicate start time of the exam</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>