force-app/main/default/objects/Exam_Slot__c/fields/Total_Slots__c.field-meta.xml
<CustomField>
    <fullName>Total_Slots__c</fullName>
    <description>This field holds the value for total available slot</description>
    <label>Total Slots</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>