force-app/main/default/objects/Exam_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_Slots__c</columns>
    <columns>Registered_Slots__c</columns>
    <columns>Session__c</columns>
    <columns>Status__c</columns>
    <columns>Schedule_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>